--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "scripts": {
         "dev": "webpack-dev-server --config webpack.config.js --hot --progress --inline --colors",
         "build": "webpack -p --config webpack.config.js --progress --colors --display-error-details",
-        "postinstall": "npm run build",
         "start": "node server.js"
     },
     "dependencies": {
@@ -39,7 +38,8 @@
         "react-router-dom": "4.1.1",
         "react-tap-event-plugin": "2.0.1",
         "redux": "3.6.0",
-        "redux-thunk": "2.2.0"
+        "redux-thunk": "2.2.0",
+        "reqwest": "^2.0.5"
     },
     "devDependencies": {
         "autoprefixer": "6.7.7",
