--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "html-webpack-plugin": "2.28.0",
         "jest-bamboo-formatter": "1.0.1",
         "material-ui": "0.18.1",
+        "moment": "^2.18.1",
         "node-sass": "4.5.3",
         "path": "0.12.7",
         "react": "15.4.2",
