--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "babel-polyfill": "6.23.0",
         "classnames": "2.2.5",
         "domready": "1.0.8",
+        "express": "^4.15.3",
         "extract-text-webpack-plugin": "2.1.0",
         "fastclick": "1.0.6",
         "html-webpack-plugin": "2.28.0",
